# obi

./: Cargo.toml  flake.nix  spec.md
.direnv/: flake-profile  flake-profile.rc
src/: convert.rs  decode.rs  encode.rs  error.rs  lib.rs  rle.rs
tests/: image.rs  integration.rs  serde.rs
